#80 Tables in keypoint manager now have the ObjectUID column fixed, so it is always visible

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,3 +1,53 @@
+.zui-table {
+    /* border: none; */
+    border-right: solid 1px #DDEFEF;
+    border-collapse: separate;
+    border-spacing: 0;
+    font: normal 13px Arial, sans-serif;
+}
+
+.zui-table thead th {
+    background-color: #DDEFEF;
+    /* border: none; */
+    color: #336B6B;
+    padding: 10px;
+    text-align: left;
+    text-shadow: 1px 1px 1px #fff;
+    white-space: nowrap;
+}
+
+.zui-table tbody td {
+    border-bottom: solid 1px #DDEFEF;
+    color: #333;
+    padding: 10px;
+    text-shadow: 1px 1px 1px #fff;
+    white-space: nowrap;
+}
+
+.zui-wrapper {
+    position: relative;
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.zui-scroller {
+    margin-left: 141px;
+    overflow-x: scroll;
+    overflow-y: visible;
+    padding-bottom: 5px;
+    width: 600px;
+    max-width: 600px;
+}
+
+.zui-table .zui-sticky-col {
+    border-left: solid 1px #DDEFEF;
+    border-right: solid 1px #DDEFEF;
+    left: 0;
+    position: absolute;
+    top: auto;
+    width: 120px;
+}
+
 .body {
     font-family: 'Roboto', sans-serif !important;
     padding-top: 65px;
